--- a/Server/public/views/config.html
+++ b/Server/public/views/config.html
@@ -122,10 +122,18 @@
 
 		<h4>Requester</h4>
 		<div class="form-group">
-			<label for="inputServerUrl" class="col-sm-4 control-label">Server URL</label>
+			<label for="inputServerUrlForPlat" class="col-sm-4 control-label">Server URL for plate information</label>
 			<div class="col-sm-4">
-				<input type="text" class="form-control" id="inputServerUrl" placeholder="Server URL"
-					   value="configData.requester.url" ng-model="configData.requester.url" required>
+				<input type="text" class="form-control" id="inputServerUrlForPlat" placeholder="http://"
+					   value="configData.requester.urlForPlate" ng-model="configData.requester.urlForPlate" required>
+			</div>
+		</div>
+
+		<div class="form-group">
+			<label for="inputServerUrlForCounter" class="col-sm-4 control-label">Server URL for cars counter</label>
+			<div class="col-sm-4">
+				<input type="text" class="form-control" id="inputServerUrlForCounter" placeholder="http://"
+					   value="configData.requester.urlForCounter" ng-model="configData.requester.urlForCounter" required>
 			</div>
 		</div>
 
